// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="css-1y1e1q7 "
  disabled={false}
  onClick={null}
>
  <div
    className="css-4mrwyf"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="css-6bfwc1 "
  disabled={false}
  onClick={null}
>
  <div
    className="css-1mhi2x7"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="css-1y1e1q7 "
  disabled={false}
  onClick={null}
>
  <div
    className="css-4mrwyf"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="css-5xfjjh "
  disabled={false}
  onClick={null}
>
  <div
    className="css-4mrwyf"
  >
    Press me
  </div>
</Button>
`;
